--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "font-awesome": "^4.7.0",
     "init": "^0.1.2",
     "lucide-react": "^0.468.0",
