--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -13,11 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -30,6 +33,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.0",
+    "react-router-dom": "^7.1.1",
     "shadcn": "^2.1.8",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
