added alot of things like responsiveness ,colors removed ugly designs etd

--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -27,6 +27,9 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "font-awesome": "^4.7.0",
+    "gsap": "^3.12.5",
+    "react-use": "^17.5.1",
+    "@gsap/react": "^2.1.2",
     "init": "^0.1.2",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
