--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -21,6 +22,7 @@
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -28,8 +30,6 @@
     "embla-carousel-react": "^8.5.1",
     "font-awesome": "^4.7.0",
     "gsap": "^3.12.5",
-    "react-use": "^17.5.1",
-    "@gsap/react": "^2.1.2",
     "init": "^0.1.2",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
@@ -37,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.1.0",
     "react-router-dom": "^7.1.1",
+    "react-use": "^17.5.1",
     "shadcn": "^2.1.8",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
