new changes for my jigree sulaiman

--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -35,11 +37,15 @@
     "init": "^0.1.2",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
+    "react-clock": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.0",
     "react-router-dom": "^7.1.1",
+    "react-time-picker": "^7.0.0",
     "react-use": "^17.5.1",
+    "redux-persist": "^6.0.0",
     "shadcn": "^2.1.8",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
