--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -40,6 +40,7 @@
     "font-awesome": "^4.7.0",
     "gsap": "^3.12.5",
     "init": "^0.1.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-clock": "^5.1.0",
