--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -46,6 +46,7 @@
     "react-clock": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.0",
     "react-router-dom": "^7.1.1",
