--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -19,6 +19,7 @@
     "@mapbox/polyline": "^1.2.1",
     "@mui/material": "^6.4.3",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
@@ -29,6 +30,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -38,6 +40,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^12.4.1",
     "gsap": "^3.12.5",
     "init": "^0.1.2",
     "lodash": "^4.17.21",
