--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "7.0.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.2",
+    "@ionic/core": "^8.4.3",
+    "@ionic/react": "^8.4.3",
+    "@ionic/react-router": "^8.4.3",
     "@mapbox/polyline": "^1.2.1",
     "@mui/material": "^6.4.3",
     "@radix-ui/react-avatar": "^1.1.2",
